Release history for Dist-Zilla-App-Command-dumpphases

{{$NEXT}}

1.000001 2014-08-03T04:00:28Z
 [Bugfix]
 - Require a newer Path::ScanINC due to Win32 issues.

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑2)
 - runtime: ↑1
 - test: +1 -3 (recommends: ↑1 -1)

1.000000 2014-06-05T00:01:36Z
 [00 Major]
 - Moderate packaging changes that will affect hand-operated downstreams.

 [01 New Version Scheme]
 - Version scheme is now x.yyyyyy instead of x.y.z
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129
 - This is the primary reason for the 1.x on the box.

 [02 Switched to EUMM]
 - Used ExtUtils::MakeMaker for deployment instead of Module::Build
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f
 - Dependencies softened.

 [Dependencies::Stats]
 - Dependencies changed since 0.6.0, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +8 -11 (suggests: +2 -1)
 - runtime: +1 ↑1
 - test: +4 ↓1 (recommends: +4)

0.6.0 2013-11-13T03:54:53Z
 [00 Minor]
 - Color handling is now validated, and spews list of dynamically determined themes on your system
 - TERMINOLOGY documentation moved down
 - Tests added (Finally!)
 - Moose autobox code removed.
 - Actually remove Test::Compile

 [Dependencies::Stats]
 - Dependencies changed since 0.5.1, see misc/*.deps* for details
 - runtime: +3 -1
 - test: +2 -3

0.5.1 2013-11-13T00:46:05Z
 [00 Doc Fix]
 - Added a TERMINOLOGY section, to help clear up the use of the term "phase" relative to this module, as it deals with
   a few things that aren't really "phases" in the proper sense of the term.

0.5.0 2013-11-12T23:24:04Z
 [00 Major]
 - Reimplement guts in terms of the new RoleDB utility.
 - This means some of the phase titles have changed
 - However, it now means all phases have descriptions