@@ -16,10 +16,10 @@ version 1.000002
 
 If you are using an HTML-enabled POD viewer, you should see a screenshot of this in action:
 
-( Everyone else can visit [http://kentfredric.github.io/Dist-Zilla-App-Command-dumpphases/media/example\_01.png](http://kentfredric.github.io/Dist-Zilla-App-Command-dumpphases/media/example_01.png) )
+( Everyone else can visit [http://kentnl.github.io/Dist-Zilla-App-Command-dumpphases/media/example\_01.png](http://kentnl.github.io/Dist-Zilla-App-Command-dumpphases/media/example_01.png) )
 
 <div>
-    <center><img src="http://kentfredric.github.io/Dist-Zilla-App-Command-dumpphases/media/example_01.png" alt="Screenshot" width="721" height="1007"/></center>
+    <center><img src="http://kentnl.github.io/Dist-Zilla-App-Command-dumpphases/media/example_01.png" alt="Screenshot" width="721" height="1007"/></center>
 </div>
 
 # DESCRIPTION
